# cmd/api/docs/swagger.json
@@ -30,9 +30,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "message\": string, \"active\": bool}",
+                        "description": "OK",
                         "schema": {
-                            "type": "map"
+                            "$ref": "#/definitions/dto.TaskStateUpdateResponse"
                         }
                     }
                 }
@@ -40,7 +40,7 @@
         },
         "/api/v1/tasks/messages": {
             "get": {
-                "description": "Deletes message task that will",
+                "description": "Gets message tasks with pagination",
                 "consumes": [
                     "application/json"
                 ],
@@ -50,12 +50,35 @@
                 "tags": [
                     "Message Task"
                 ],
-                "summary": "Deletes Message Task",
+                "summary": "Gets message tasks with pagination",
                 "parameters": [
                     {
-                        "type": "object",
-                        "description": "COMPLETED",
+                        "enum": [
+                            "COMPLETED",
+                            "WAITING",
+                            "PROCESSING",
+                            "FAILED"
+                        ],
+                        "type": "string",
+                        "description": "status filter",
                         "name": "status",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "number",
+                        "description": "page",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "maximum": 20,
+                        "minimum": 1,
+                        "type": "number",
+                        "description": "page size",
+                        "name": "page_size",
                         "in": "query",
                         "required": true
                     }
@@ -85,7 +108,7 @@
                 "summary": "CreatesMessageTask",
                 "parameters": [
                     {
-                        "description": "Add MessageTaskCreateRequest",
+                        "description": "MessageTaskCreateRequest",
                         "name": "MessageTaskCreateRequest",
                         "in": "body",
                         "required": true,
@@ -98,13 +121,49 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/model.MessageTask"
+                            "$ref": "#/definitions/dto.MessageTaskCreateResponse"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             }
         },
         "/api/v1/tasks/messages/{id}": {
+            "get": {
+                "description": "Gets message task result from cache",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Message Task"
+                ],
+                "summary": "Gets message task result from cache",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "message id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.MessageTaskResult"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "description": "Deletes message task that will",
                 "consumes": [
@@ -120,7 +179,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Message Task ID",
+                        "description": "message task id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -132,6 +191,9 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             }
@@ -172,6 +234,17 @@
                 }
             }
         },
+        "dto.MessageTaskCreateResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.PageResponse-model_MessageTask": {
             "type": "object",
             "properties": {
@@ -194,6 +267,17 @@
             "properties": {
                 "active": {
                     "type": "boolean"
+                }
+            }
+        },
+        "dto.TaskStateUpdateResponse": {
+            "type": "object",
+            "properties": {
+                "active": {
+                    "type": "boolean"
+                },
+                "message": {
+                    "type": "string"
                 }
             }
         },
@@ -231,6 +315,20 @@
                     "type": "string"
                 },
                 "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.MessageTaskResult": {
+            "type": "object",
+            "properties": {
+                "messageId": {
+                    "type": "string"
+                },
+                "sendingTime": {
+                    "type": "string"
+                },
+                "taskId": {
                     "type": "string"
                 }
             }
